chore: updating some mapper classes